[package]
name = "zoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.60", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
wasm-bindgen = "0.2.83"
yew = "0.19"
